frontend/src/components/PostPage/PostPage.css
.post-container {
    position: relative;
    top: 175px;
}

.post-container h2 {
    font-family: 'Fredoka One', cursive;
    font-size: 38px;
}

.upper-container {
    display: flex;
    justify-content: space-around;
    position: relative;
    top: 5vh;
}

.bottom-container {
    position: relative;
    top: 18vh;
    margin-left: 50px;
}

.post-buttons {
    display: flex;
    flex-direction: column;
}

.seller-profile-pic {
    width: 90px;
    height: 90px;
    border-radius: 100%;
    object-fit: cover;
    position: relative;
    /* top: 30px; */
}

.seller-container {
    display: flex;
    justify-content: space-around;
    position: relative;
    top: 70px;
}

.post-buttons > button {
    margin: 15px;
}

.quantity-category-container {
    display: flex;
    justify-content: space-around;
    margin-top: 50px;
}

.quantity-number {
    position: relative;
    bottom: 45px;
}

.post-page-image {
    max-width: 650px;
    max-height: 365px;
    object-fit: cover;
    position: relative;
    top: 50px;
}

h2.seller-username {
    position: relative;
    /* top: 35px;
    right: 30px; */
    font-size: 30px;
}

.list-icon {
    position: relative;
    left: 10px;
    top: 7px;
    font-size: 25px;
}

.add-to-list-button {
    font-family: 'Architects Daughter', cursive;
    font-size: 20px;
    border: 2px solid blue;
    border-radius: 10px;
    color: blue;
}

.add-to-list-button:hover {
    color: yellow;
    background-color: blue;
}

.category-text {
    font-family: 'Architects Daughter', cursive;
    font-size: 20px;
}

.quantity-text {
    font-family: 'Architects Daughter', cursive;
    font-size: 20px;
}

.line-div-1 {
    border-left: solid 1px black;
    height: 625px;
    position: absolute;
    right: -60px;
}

.line-div-2 {
    border-top: 1px solid black;
    position: absolute;
    width: 400px;
    top: -30px;
}

.line-div-3 {
    border-top: 1px solid black;
    position: absolute;
    width: 390px;
    bottom: -30px;
}

.line-div-4 {
    border-top: 1px solid black;
    position: absolute;
    width: 670px;
    top: 11px;
}

.description-container {
    padding: 20px 0px;
}

.description-text {
    font-family: 'Architects Daughter', cursive;
    font-size: 23px;
}

.more-post-title, 
.similar-post-title{
    font-size: 19px;
    font-family: "Fredoka One", cursive;
}

.similar-post-price,
.more-post-price {
    font-family: 'Architects Daughter', cursive;
    font-size: 18px;
    position: relative;
    bottom: 14px;
}

.right-container {
    min-height: 545px;
    min-width: 345px;
}

.left-container {
    min-width: 650px;
    display: flex;
    justify-content: center;
    position: relative;
}

.more-posts-div-container,
.similar-posts-div-container {
    display: flex;
    flex-wrap: nowrap;
    overflow: scroll;
}

.more-post-div,
.similar-post-div {
    margin: 20px;
}

.add-list-post-container {
    position: fixed;
    top: 20vh;
    left: 60vh;
    width: 500px;
    height: 400px;
    border: blue solid 3px;
    border-radius: 1rem;
    background-color: yellow;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    overflow: scroll;
}

.list-buttons-container {
    display: flex;
    flex-direction: column;
}

.seller-username > a,
.seller-username > a:visited {
    text-decoration: none;
    color: black;
}

